update trendyesg function

--- a/vignette/vignette_trendyesg.ipynb
+++ b/vignette/vignette_trendyesg.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "cfc4efea",
    "metadata": {
     "scrolled": false
@@ -118,22 +118,27 @@
     "        trendtick_df['maxprice_rank'] = trendtick_df['regularMarketPrice'].rank(method='max')\n",
     "\n",
     "        return trendtick_df.sort_values(by=['maxprice_rank']).iloc[start:start+5]\n",
-    "\n",
+    "    \n",
     "    #get trendy tickers outcome\n",
-    "    tdf = get_trendycom(region, start=5)\n",
-    "    #make general search of ticker e.g.\n",
-    "    ttlist = [i for i in tdf['symbol']]\n",
-    "    reg_tick = '(^.+?)-|(^.*)'\n",
-    "    for tick in ttlist:\n",
-    "        ticklist=[]\n",
-    "        try:\n",
-    "            ticklist = [re.match(reg_tick,tick).group(1) for tick in ttlist]\n",
-    "            ticklist.extend([re.match(reg_tick,tick).group(2) for tick in ttlist])\n",
-    "            ticklist = set(ticklist)\n",
-    "        except Exception as e:\n",
-    "            print(f'{e}: the ticker is not supported')\n",
-    "    ticklist = list(filter(None, ticklist))\n",
-    "\n",
+    "    tdf = get_trendycom(region=region, start=5)\n",
+    "    assert tdf.empty == False, f'there is no search results of {region} market'\n",
+    "    def ticktrans(tdf):\n",
+    "        #make fuzzy search of ticker e.g.\n",
+    "        ttlist = [i for i in tdf['symbol']]\n",
+    "        if region == 'US':\n",
+    "            reg_tick = '(^.+?)-|(^.*)'\n",
+    "            for tick in ttlist:\n",
+    "                try:\n",
+    "                    ticklist = [re.match(reg_tick,tick).group(1) for tick in ttlist]\n",
+    "                    ticklist.extend([re.match(reg_tick,tick).group(2) for tick in ttlist])\n",
+    "                    ticklist = list(filter(None, ticklist))\n",
+    "                    return ticklist\n",
+    "                except TypeError as e:\n",
+    "                    print(f'{e}: the ticker is not supported')\n",
+    "        else:\n",
+    "            return ttlist\n",
+    "    ticktransl = ticktrans(tdf)\n",
+    "    \n",
     "    base_url = 'https://tf689y3hbj.execute-api.us-east-1.amazonaws.com/prod/authorization/'\n",
     "    df = pd.DataFrame()\n",
     "    company_name=[]\n",
@@ -143,7 +148,7 @@
     "    total=[]\n",
     "    region=[]\n",
     "    ticker=[]\n",
-    "    for brand_tick in ticklist:\n",
+    "    for brand_tick in ticktransl:\n",
     "        try:\n",
     "            response_esg = requests.get(base_url+'search?',params={'q':brand_tick,'token':app_key})\n",
     "            response_esg.raise_for_status()\n",
@@ -153,14 +158,14 @@
     "            gov_score.append(response_esg.json()[0]['governance_score'])\n",
     "            total.append(response_esg.json()[0]['total'])\n",
     "            ticker.append(brand_tick)\n",
-    "        except IndexError as ind_err:\n",
+    "        except (IndexError, TypeError) as error:\n",
     "            company_name.append(brand_tick)\n",
     "            env_score.append('NA')\n",
     "            soc_score.append('NA')\n",
     "            gov_score.append('NA')\n",
     "            total.append('NA')\n",
     "            ticker.append(brand_tick)\n",
-    "            print(f\"the company's esg not in database\")\n",
+    "            print(f\"{brand_tick}'s esg not in database\")\n",
     "        except HTTPError as http_err:\n",
     "            print(f'HTTP error occurred: {http_err}')\n",
     "        except Exception as err: \n",
@@ -280,10 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "id": "f4893138",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LCID's esg not in database\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -305,75 +317,96 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>shortName</th>\n",
-       "      <th>regularMarketPrice</th>\n",
-       "      <th>quoteType</th>\n",
-       "      <th>symbol</th>\n",
-       "      <th>maxprice_rank</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>env_score</th>\n",
+       "      <th>soc_score</th>\n",
+       "      <th>gov_score</th>\n",
+       "      <th>total</th>\n",
+       "      <th>ticker</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Ford Motor Company</td>\n",
-       "      <td>21.45</td>\n",
-       "      <td>EQUITY</td>\n",
-       "      <td>F</td>\n",
-       "      <td>6.0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>AMC Entertainment Holdings, Inc.</td>\n",
+       "      <td>210</td>\n",
+       "      <td>216</td>\n",
+       "      <td>200</td>\n",
+       "      <td>626</td>\n",
+       "      <td>AMC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Zillow Group, Inc.</td>\n",
-       "      <td>60.23</td>\n",
-       "      <td>EQUITY</td>\n",
-       "      <td>Z</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>LCID</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>LCID</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Everbridge, Inc.</td>\n",
-       "      <td>63.00</td>\n",
-       "      <td>EQUITY</td>\n",
-       "      <td>EVBG</td>\n",
-       "      <td>8.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>General Motors Company</td>\n",
+       "      <td>391</td>\n",
+       "      <td>323</td>\n",
+       "      <td>215</td>\n",
+       "      <td>929</td>\n",
+       "      <td>GM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Crude Oil Jan 22</td>\n",
-       "      <td>72.68</td>\n",
-       "      <td>FUTURE</td>\n",
-       "      <td>CL=F</td>\n",
-       "      <td>9.0</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Bottomline Technologies (de), Inc.</td>\n",
+       "      <td>540</td>\n",
+       "      <td>302</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1142</td>\n",
+       "      <td>EPAY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>BABA-SW</td>\n",
-       "      <td>124.90</td>\n",
-       "      <td>EQUITY</td>\n",
-       "      <td>9988.HK</td>\n",
-       "      <td>10.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Cerner Corporation</td>\n",
+       "      <td>532</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1132</td>\n",
+       "      <td>CERN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             shortName  regularMarketPrice quoteType   symbol  maxprice_rank\n",
-       "7   Ford Motor Company               21.45    EQUITY        F            6.0\n",
-       "1   Zillow Group, Inc.               60.23    EQUITY        Z            7.0\n",
-       "11    Everbridge, Inc.               63.00    EQUITY     EVBG            8.0\n",
-       "8     Crude Oil Jan 22               72.68    FUTURE     CL=F            9.0\n",
-       "6              BABA-SW              124.90    EQUITY  9988.HK           10.0"
+       "                         company_name env_score soc_score gov_score total  \\\n",
+       "0    AMC Entertainment Holdings, Inc.       210       216       200   626   \n",
+       "1                                LCID        NA        NA        NA    NA   \n",
+       "2              General Motors Company       391       323       215   929   \n",
+       "3  Bottomline Technologies (de), Inc.       540       302       300  1142   \n",
+       "4                  Cerner Corporation       532       300       300  1132   \n",
+       "\n",
+       "  ticker  \n",
+       "0    AMC  \n",
+       "1   LCID  \n",
+       "2     GM  \n",
+       "3   EPAY  \n",
+       "4   CERN  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tdf"
+    "trendyesg(region='US',start =10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63867fda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
